<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>es.gob.afirma</groupId>
	<artifactId>afirma-ui-simpleafirma</artifactId>
	<name>afirma-ui-simpleafirma</name>
	<version>3.3.2-SNAPSHOT</version>

	<properties>
        <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
		<afirma.keytool.keystore>${basedir}/afirma.keystore</afirma.keytool.keystore>
        <afirma.keytool.alias>codesign</afirma.keytool.alias>
        <afirma.keytool.password>afirma</afirma.keytool.password>
	</properties>


	<repositories>
		<repository>
			<id>uji</id>
			<url>http://devel.uji.es/nexus/content/groups/public/</url>
		</repository>
	</repositories>
	<dependencies>
	    
	    <dependency>
			<groupId>com.dmurph</groupId>
  			<artifactId>JGoogleAnalyticsTracker</artifactId>
  			<version>1.1.0</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-core</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-ui-core-jse</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-ui-core-jse-keystores</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-core-keystores</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-keystores-single</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-keystores-filters</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-keystores-mozilla</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-core-pkcs7</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-cms</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-cades</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-cades-multi</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-pdf</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-core-xml</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-xades</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-odf</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-ooxml</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-cadestri-client</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-xadestri-client</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-padestri-client</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-xmlsignature</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-validation</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-core-massive</artifactId>
			<version>${project.version}</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob.afirma</groupId>
			<artifactId>afirma-crypto-batch-client</artifactId>
			<version>${project.version}</version>
		</dependency>

		<dependency>
			<groupId>com.madgag.spongycastle</groupId>
			<artifactId>core</artifactId>
			<version>1.56.0.0</version>
		</dependency>

		<dependency>
			<groupId>com.madgag.spongycastle</groupId>
			<artifactId>prov</artifactId>
			<version>1.56.0.0</version>
		</dependency>
		
		<dependency>
			<groupId>com.madgag.spongycastle</groupId>
			<artifactId>bcpkix-jdk15on</artifactId>
			<version>1.56.0.0</version>
		</dependency>
				
		<dependency>
			<groupId>es.gob</groupId>
			<artifactId>jmulticard-jse</artifactId>
			<version>1.4</version>
		</dependency>
		
		<dependency>
			<groupId>es.gob</groupId>
			<artifactId>jmulticard-ui</artifactId>
			<version>1.4</version>
		</dependency>

		<dependency>
			<groupId>com.apple</groupId>
			<artifactId>applejavaextensions</artifactId>
			<version>1.5.4</version>
		</dependency>

		<dependency>
			<groupId>javax.help</groupId>
			<artifactId>javahelp</artifactId>
			<version>2.0.05</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
  			<groupId>org.apache.pdfbox</groupId>
  			<artifactId>pdfbox</artifactId>
  			<version>2.0.5</version>
  			<exclusions>
  				<exclusion>
            				<groupId>org.bouncycastle</groupId>
            				<artifactId>bcmail-jdk15</artifactId>
            			</exclusion>
            			<exclusion>
            				<groupId>org.bouncycastle</groupId>
            				<artifactId>bcprov-jdk15</artifactId>
  				</exclusion>
  				<exclusion>
  					<groupId>com.ibm.icu</groupId>
            			<artifactId>icu4j</artifactId>
  				</exclusion>
        		</exclusions>
		</dependency>
		
		<dependency>
			<groupId>com.github.markusbernhardt</groupId>
			<artifactId>proxy-vole</artifactId>
			<version>1.0.3</version>
		</dependency>

		<!-- Libreria "Java Native Access" -->
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna</artifactId>
			<version>4.4.0</version>
		</dependency>

		<dependency>
		 	 <groupId>javax.jnlp</groupId>
		 	 <artifactId>jnlp-api</artifactId>
		 	 <version>8.0</version>
		 	 <scope>system</scope>
		 	 <systemPath>${java.home}/lib/javaws.jar</systemPath>
		 </dependency>
	</dependencies>
	
	<scm>
		<connection>scm:svn:http://svn-ctt.administracionelectronica.gob.es/svn/clienteafirma/project/afirma-desktop/afirma-simple/trunk</connection>
		<url>http://svn-ctt.administracionelectronica.gob.es/svn/clienteafirma/project/afirma-desktop/afirma-simple/trunk</url>
	</scm>

	<profiles>
	
	<profile>
			<id>env-dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
	      		</activation>
	      
	      		<build>
       			<plugins>
       				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.6.1</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<fork>true</fork>
						<compilerArgument>-XDignore.symbol.file</compilerArgument>
					</configuration>
				</plugin>
					
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
					<configuration>
						<archive>
							<manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
							<addMavenDescriptor>false</addMavenDescriptor>
						</archive>
					</configuration>
				</plugin>
			</plugins>
		  </build>
	    </profile>
	
	    <profile>
	      <id>env-deploy</id>
	      <activation>
	        <property>
	          <name>env</name>
	          <value>deploy</value>
	        </property>
	      </activation>

	      <build>
	      	<finalName>AutoFirma</finalName>
       		<plugins>
       				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.6.1</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<fork>true</fork>
						<compilerArgument>-XDignore.symbol.file</compilerArgument>
					</configuration>
				</plugin>
	
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>3.0.0</version>
					<executions>
						<execution>
							<phase>package</phase>
							<goals>
								<goal>shade</goal>
							</goals>
							<configuration>
								<transformers>
									<transformer
										implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
										<manifestEntries>
											<Main-Class>es.gob.afirma.standalone.SimpleAfirma</Main-Class>
											<Permissions>all-permissions</Permissions>
										</manifestEntries>
									</transformer>
								</transformers>
							</configuration>
						</execution>
					</executions>
					<configuration>
						<archive>
							<addMavenDescriptor>false</addMavenDescriptor>
						</archive>
						<filters>
							<filter>
								<artifact>*:*</artifact>
								<excludes>
									<exclude>META-INF/*.SF</exclude>
									<exclude>META-INF/*.DSA</exclude>
									<exclude>META-INF/*.RSA</exclude>
									<exclude>*.crt</exclude>
								</excludes>
							</filter>
							<filter>
								<artifact>net.java.xades:jxades</artifact>
								<excludes>
									<exclude>TrustRootCACertificates/**</exclude>
									<exclude>*.*</exclude>
								</excludes>
							</filter>
						</filters>
					</configuration>
					
				</plugin>
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
					<configuration>
						<archive>
							<manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
							<addMavenDescriptor>false</addMavenDescriptor>
						</archive>
					</configuration>
				</plugin>
			</plugins>
		  </build>
	    </profile>
	</profiles>

</project>
